--- a/main.html
+++ b/main.html
@@ -4,5 +4,20 @@
   </head>
   <body>
     <!-- Write your code here -->
+	  <div class="left">
+		  <img src="https://static.xx.fbcdn.net/rsrc.php/y8/r/dF5SId3UHWd.svg" alt="Facebook logo">
+        <p>Facebook helps you connect and share with the people in your life.</p>
+	  </div>
+	  <div class="right">
+		   <form action="your_login_action_url" method="post">
+            <input type="text" id="email" name="email" placeholder="Email address or phone number" required>
+
+            <input type="password" id="password" name="password" placeholder="Password" required>
+
+            <button type="submit">Log in</button>
+            <a href="your_forgotten_account_url">Forgotten account?</a>
+        </form>
+        <button class="signup">Create new account</button>
+	  </div>
   </body>
 </html>
